--- a/style.css
+++ b/style.css
@@ -15,3 +15,31 @@ a {
  text-decoration: none;
  color: black;
 }
+
+.container {
+  display: grid;
+  grid-template-areas:
+    "sidebar header"
+    "sidebar profile"
+    "sidebar main";
+}
+
+.sidebar {
+  grid-area: sidebar;
+  background: blue;
+}
+
+.header {
+  grid-area: header;
+  background: red;
+}
+
+.header__profile {
+  grid-area: profile;
+  background: purple;
+}
+
+.main {
+  grid-area: main;
+  background: yellow;
+}
