Add to do list to stylesheet

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/*
+
+  To do list
+  1. Download suitable images and icons
+  2. Pick right color theme
+  3. Pick typography and link it
+  4. Use grid to finish laying out other parts of the webpage
+
+*/
+
+
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
