--- a/style.css
+++ b/style.css
@@ -48,11 +48,24 @@ a {
     "sidebar main";
 }
 
+.logo-icons {
+  width: 100%;
+  filter: brightness(0) invert(1);
+}
+
+/* Styles */
+
 .sidebar {
+  font-weight: 700;
+  letter-spacing: .1rem;
   grid-area: sidebar;
   color: #fff;
   background: #34d399;
   font-size: 1.3rem;
+}
+
+.sidebar ul:first-child {
+  margin-bottom: 4rem;
 }
 
 .sidebar__title {
@@ -62,12 +75,10 @@ a {
 }
 
 .sidebar__logo {
+  max-width: 2.5rem;
+  margin: 0 1rem 1rem 0;
+  vertical-align: -.7rem;
   display: inline-block;
-}
-
-.sidebar__logo--img {
-  width: 100%;
-  filter: brightness(0) invert(1);
 }
 
 .header {
