--- a/style.css
+++ b/style.css
@@ -69,9 +69,11 @@ a {
 }
 
 .sidebar__title {
-  display: grid;
   margin-left: 1em;
-  grid-template-columns: 2.5rem 1fr;
+}
+
+.sidebar__title > .sidebar__logo {
+  vertical-align: top;
 }
 
 .sidebar__logo {
