Add style to search bar

--- a/style.css
+++ b/style.css
@@ -101,13 +101,17 @@ textarea {
 .header__container {
   display: grid;
   gap: 2rem;
-  border: 2px solid blue;
   margin: 0 auto;
   grid-template-columns: 5fr repeat(3, 1fr);
 }
 
 .header__container input[type="search"] {
   width: 70%;
+  margin-left: 2rem;
+  border: none;
+  background: rgb(208, 208, 208);
+  border-radius: 100px;
+  padding: .3rem 0 .3rem .8rem;
 }
 
 
