Adjust margin in header and button style

--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ textarea {
 
 .header__profile--links {
   display: grid;
-  margin-left: 6rem;
-  gap: 1rem;
+  margin-left: 5rem;
+  gap: 2rem;
   grid-template-columns: repeat(3, 8rem);
   justify-content: end;
   align-items: center;
@@ -208,7 +208,7 @@ textarea {
 
 .header__profile--item {
   background: #34d399;
-  padding: 1rem 2rem;
+  padding: .8rem 2rem;
   text-align: center;
   border-radius: 100px;
 }
