Add box shadow to announcement section

--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ textarea {
   background: #fff;
   padding: 2rem 3rem;
   border-radius: 10px;
+  box-shadow: 2px 2px 10px rgb(205, 205, 205);
 
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
