--- a/style.css
+++ b/style.css
@@ -319,4 +319,22 @@ textarea {
 
 .main-trending__profiles {
   background: #fff;
+  display: grid;
+  grid-template-rows: repeat(7rem, 4);
+  grid-auto-rows: 7rem;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+.main-trending__profiles img {
+  display: inline;
+  width: 100%;
+  background: #a78bfa;
+  border-radius: 100%;
+}
+
+.main-trending__profile {
+  display: inline-grid;
+  grid-template-columns: 5rem 1fr;
+  gap: 1rem;
 }
