--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ textarea {
 
 .main-trending__profiles {
   background: #fff;
+  box-shadow: 2px 2px 10px rgb(205, 205, 205);
   display: grid;
   grid-template-rows: repeat(7rem, 4);
   grid-auto-rows: 7rem;
