Add more right margin to profile header

--- a/style.css
+++ b/style.css
@@ -100,8 +100,7 @@ textarea {
 .header__container {
   display: grid;
   gap: 2rem;
-  margin: 0 auto;
-  grid-template-columns: 5fr 2rem 300px;
+  grid-template-columns: 5fr 2rem 20rem;
   align-content: center;
   align-items: center;
 }
